# particle_sim

./: .gitmodules  CMakeLists.txt  LICENSE.txt  Readme.md
libs/: CMakeLists.txt
libs/glad/: CMakeLists.txt
libs/glad/include/glad/: glad.h
libs/glad/src/: glad.c
libs/imgui/: CMakeLists.txt
resources/ply/: icosahedron.ply  sphere.ply
resources/shader_includes/: intersections.comp.in  particle_types.in  spring_types.in
resources/shaders/: advect_particles.comp  advect_particles_springs.comp  cloth_tess.frag  cloth_tess.tesc  cloth_tess.tese  floor.frag  floor.vert  hair.frag  hair.tesc  hair.tese  hair.vert  mesh.frag  mesh.vert  simpl.frag  simpl.vert  simple_spawner.comp  sphere.frag  sphere.vert  spring_forces.comp  spring_point.frag  spring_point.vert
src/: CMakeLists.txt  Camera.cpp  Camera.hpp  GlobalContext.cpp  GlobalContext.hpp  main.cpp
src/graphics/: Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  TriangleMesh.cpp  TriangleMesh.hpp  my_gl_header.hpp
src/particle_system/: ClothSystem.cpp  ClothSystem.hpp  ParticleSystem.cpp  ParticleSystem.hpp  SpringSystem.cpp  SpringSystem.hpp
